<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardSearchCardMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTintMode="add"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayoutSearchCard">


                <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tabLayouttSearchCard"
                    >


                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_card_tab_item_1"

                        />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_card_tab_item_2"

                        />

                </com.google.android.material.tabs.TabLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputSearchCardFrom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_card_txt_input_1"
                    app:expandedHintEnabled="false"
                    app:startIconContentDescription="Vuelo2"
                    app:startIconDrawable="@drawable/airplane_takeoff"
                    android:layout_marginBottom="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtInputEditSearchCardFrom"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputSearchCardTo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_card_txt_input_2"
                    app:expandedHintEnabled="false"
                    app:startIconContentDescription="Vuelo2"
                    app:startIconDrawable="@drawable/airplane_landing"
                    android:layout_marginBottom="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtInputEditSearchCardTo"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputSearchCardDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_card_txt_input_3"
                    app:expandedHintEnabled="false"
                    app:startIconContentDescription="Vuelo2"
                    app:startIconDrawable="@drawable/calender"
                    android:layout_marginBottom="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtInputEditSearchCardDate"/>


                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="18dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputSearchCardPassenger"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_card_txt_input_4"
                        app:expandedHintEnabled="false"
                        app:startIconContentDescription="Vuelo2"
                        app:startIconDrawable="@drawable/group"
                        tools:ignore="MissingConstraints"
                        android:layout_marginEnd="13dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtInputEditSearchCardPassenger"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputSearchCardClass"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_card_txt_input_5"
                        app:expandedHintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:startIconContentDescription="Vuelo2"
                        app:startIconDrawable="@drawable/thumbup"
                        tools:ignore="MissingConstraints">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtInputEditSearchCardClass"/>


                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnSearchCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_card_txt_input_btn"
                    app:backgroundTint="#F99A0E"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_flight_frag_title"
                android:layout_marginBottom="10dp"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </LinearLayout>

    </LinearLayout>


 </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
