<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/imgViewBackgroundBestDestination"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/boracay_wallpaper"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <com.google.android.material.button.MaterialButton
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/back_icon"
                app:iconTint="@color/black"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:backgroundTint="#FFFFFF"
                android:id="@+id/btnBackBestDestination"

                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/like_icon"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="#FFFFFF"
                app:layout_constraintHorizontal_bias="1.0"
                android:id="@+id/btnFavBestDestination"
                />





        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:cardCornerRadius="30dp" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"

                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtTitleBestDestination"
                                android:textAppearance="?attr/textAppearanceHeadline4"
                                android:textStyle="bold"
                                android:layout_marginEnd="10dp"
                                />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="5dp"
                                android:backgroundTint="#EEEEEE"
                                tools:ignore="MissingConstraints">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txtCodeBestDestination"
                                    android:layout_margin="8dp"
                                    android:textSize="20dp"
                                    />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:id="@+id/txtCountryBestDestination"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="40dp"
                            android:textStyle="bold"
                            android:id="@+id/txtPriceBestDestination"/>

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    >

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/best_destination_title_info"

                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/best_destination_info"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    >

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/best_destination_title_photos"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:id="@+id/imgViewBestDestinationPhoto1"
                            android:src="@drawable/boracay_img_uno"/>

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:id="@+id/imgViewBestDestinationPhoto2"
                            android:src="@drawable/boracay_img_dos"/>

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:id="@+id/imgViewBestDestinationPhoto3"
                            android:src="@drawable/boracay_img_tres"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/best_destination_btn"
                    app:backgroundTint="#F99A0E"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
